# Randominator-new

./: Cargo.toml  readme.md
src/: data.json  error.txt  example.toml  game_data.toml  imaginary_cities.toml  main.rs  names_data.toml  out.txt  readme.md  templates.toml
