[package]
name = "randominator"
version = "3.0.0"
authors = ["tilenl <tilenlampret1@gmail.com>"]
edition = "2018"
description = "Generate random sentences based on given data and templates"
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
rand = "0.8.3"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = ["suggestions"]